[options]
test_suite = test
install_requires =
    # CDK
    aws-cdk.core~=1.124.0

    # AWS Base
    boto3~=1.18
    botocore~=1.21

    # Libs
    python-dateutil
    mypy

    # External Layers
    aws-lambda-powertools~=1.21
    pydantic~=1.8.2

[coverage:paths]
source =
    src/

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 100
doctests = False
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true


[tool:isort]
force_single_line = True
line_length = 120
known_first_party = aspectlib
default_section = THIRDPARTY
forced_separate = test_aspectlib
skip = .tox,.eggs,ci/templates,build,dist

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests
